<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    tools:context=".DetailActivity"
    >

    <TextView
        android:id="@+id/tvRatingDetail"
        android:text= "@string/Rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:layout_toStartOf="@+id/tvRestaurantNameDetail"
        />

    <TextView

        android:id="@+id/tvRestaurantNameDetail"
        android:text="@string/restaurantt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"

        />

    <TextView

        android:layout_marginStart="20dp"
        android:textSize="22sp"
        android:text="@string/cuisine"
        android:textStyle="bold|italic"
        android:id="@+id/tvRestaurantCuisineDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvRestaurantNameDetail"
        android:textColor="@color/black"
        />


    <ImageView

        android:src="@drawable/shakeshack"
        android:id="@+id/ivRestaurantImageDetail"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_below="@+id/tvRestaurantCuisineDetail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/jeanan"
        />

    <ScrollView
        android:id="@+id/svRestaurantDesc"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/fabSearchCategory"
        android:layout_below="@+id/ivRestaurantImageDetail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="20sp"
        android:text="@string/dummy_text"
        android:textColor="@color/black"
        >

        <TextView
            android:id="@+id/tvRestaurantDescDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/dummy_text"
            android:textColor="@color/black"
            android:justificationMode="inter_word" />

    </ScrollView>

    <TextView
        android:id="@+id/tvDeliveryFeeLabel"
        android:text="DeliveryFee: "
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvNoOfGiftVouchersDetail"
        />

    <TextView
        android:layout_marginStart="10dp"
        android:id="@+id/tvDeliveryFee"
        android:text="_2_OMR"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvNoOfGiftVouchersDetail"
        android:layout_toEndOf="@+id/tvDeliveryFeeLabel"
         />
    
    <TextView
        android:id="@+id/tvNoOfGiftVouchersDetail"
        android:text="Vouchers: "
        android:layout_above="@+id/tvRestaurantSubTotalValueDetail"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Spinner
        android:id="@+id/spNoOfGiftVouchersDetail"
        android:layout_toEndOf="@+id/tvNoOfGiftVouchersDetail"
        android:layout_above="@+id/tvRestaurantSubTotalValueDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/tvSubTotalLabelDetail"
        android:layout_above="@+id/btnBuyVoucherDetail"
        android:text="Subtotal: "
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvRestaurantSubTotalValueDetail"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/tvSubTotalLabelDetail"
        android:layout_above="@+id/btnBuyVoucherDetail"
        android:text="_2_OMR_omr"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnBuyVoucherDetail"
        android:text="Buy Voucher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="buyVoucher"
        app:backgroundTint="@color/black"
        android:textColor="@android:color/white"

        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabShowOnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="showOnMap"
        android:src="@drawable/icon"
        android:layout_gravity="bottom|end"
        app:useCompatPadding="true"
        app:backgroundTint="@color/white"


        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/btnShowOnGoogleMaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fabShowOnMap"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="0dp"
        android:onClick="showOnGoogleMaps"
        android:src="@drawable/icon3"
        app:backgroundTint="@color/white"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/fabNavigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnShowOnGoogleMaps"
        android:layout_alignParentEnd="true"
        android:onClick="navigate"
        android:src="@drawable/icon4"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="10dp"
        app:backgroundTint="@color/white"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/fabNavigateStreetView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fabNavigate"
        android:layout_alignParentEnd="true"
        android:onClick="displayPanorama"
        android:src="@drawable/icon5"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="10dp"
        app:backgroundTint="@color/white"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/fabSearchCategory"
        android:src="@drawable/icon6"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fabNavigateStreetView"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:onClick="searchCategory"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="10dp"
        app:backgroundTint="@color/white"

        />

    <TextView
        android:id="@+id/tvSearchFor"
        android:text="@string/searchFor"
        android:layout_above="@+id/tvDeliveryFeeLabel"
        android:layout_alignParentStart="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spSearchFor"
        android:layout_toEndOf="@+id/tvSearchFor"
        android:layout_above="@+id/tvDeliveryFeeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />








    />

</RelativeLayout>






















